# cmake-examples

./: .gitignore  CMakeLists.txt  README.md  main.c  multiplyNumbers.h
cmake-practice/: CMakeLists.txt
cmake-practice/cmake/: FindHELLO.cmake
cmake-practice/lib/: CMakeLists.txt  hello.c  hello.h
cmake-practice/src/: CMakeLists.txt  main_curl.c  main_uselib.c
example/: main.c
example/libmultiplyNumbers/: CMakeLists.txt
libmultiplyNumbers/: multiplyNumbers.c
